Use cublas for matrix inversion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ set(LIBRARIES ${LIBRARIES}
     ${OPENGL_LIBRARIES})
 
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 
 set(CUDA_NVCC_FLAGS "-arch=sm_50 -Xcompiler -fPIC")
 
@@ -57,12 +57,13 @@ include_directories(${_MAYA_LOCATION}/${MAYA_INC_SUFFIX}
 
 link_directories(${_MAYA_LOCATION}/${MAYA_LIB_SUFFIX})
 
-#cuda_add_library(cuda_ops STATIC "cuda_ops.cu")
+cuda_add_library(cuda_ops STATIC "cuda_ops.cu")
+CUDA_ADD_CUBLAS_TO_TARGET(cuda_ops)
 
 add_library(${_PROJECT} SHARED ${SOURCE_FILES})
 
-#target_link_libraries(${_PROJECT} cuda_ops ${LIBRARIES} ${CUDA_LIBRARIES})
-target_link_libraries(${_PROJECT} ${LIBRARIES})
+target_link_libraries(${_PROJECT} cuda_ops ${LIBRARIES} ${CUDA_LIBRARIES})
+#target_link_libraries(${_PROJECT} ${LIBRARIES})
 
 set_target_properties(${_PROJECT} PROPERTIES
                       COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
